codex-rs/core/tests/suite/snapshots/all__suite__scenarios__astra_plugin_refresh.snap
---
source: core/tests/suite/scenarios.rs
expression: "context_snapshot::format_request_history_snapshot(\"Astra checks for Notes, refreshes its installed plugin without restarting, and uses the new skill and Code Mode MCP tool across turns.\",\n&mock.requests(),\n&ContextSnapshotOptions::default().include_request_settings(),)"
---
Scenario: Astra checks for Notes, refreshes its installed plugin without restarting, and uses the new skill and Code Mode MCP tool across turns.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  model: "gpt-6-astra"
  parallel_tool_calls: false
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"context":"all_turns","effort":"low"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
-- request 1 (turn) --
00:additional_tools/developer (3; hash=ea9f17d10ddaf3c9):
        - namespace/functions; hash=b352d00241be814a
          - custom/exec
          - function/wait
        - namespace/clock: Read or wait on time; hash=988ad490c20d3305
          - function/sleep
        - namespace/collaboration: Agent collaboration; hash=940eda70c563c144
          - function/followup_task
          - function/interrupt_agent
          - function/list_agents
          - function/send_message
          - function/spawn_agent
01:message/developer:
    Complete the request. Questions only for missing information that changes the work

    Follow applicable AGENTS.md instructions. Supplied ancestors need no rereading. Nested instructions: check where you work

    Preserve unrelated uncommitted changes. Destructive Git commands only with explicit approval

    Active sandbox and approval policy. No bypasses or repackaged rejected commands

02:message/developer[3]:
    [01] Skills: List once at session start; read always-applicable and task-relevant skills before work
    [02] <permissions instructions>
        `sandbox_mode`: `danger-full-access`. No filesystem sandbox. Network access: enabled.
        Approval policy: `never`. Do not set `sandbox_permissions`.
        </permissions instructions>
    [03] <collaboration_mode>Execute the request. Prior collaboration-mode instructions replaced. Mode changes only through a developer `<collaboration_mode>` message

        `request_user_input`, when available: optional questions that materially improve the work, never approva...ocking safe progress: one concise plain-text question [hash=291e336ce1657280]
        </collaboration_mode>
03:message/developer:
    <multi_agent_role>Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysi... active agent, no new turn. `followup_task`: new turn [hash=98e3a9369209aed0]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory....less stopped or shut down. Do not poll for completion [hash=76b09020695c57df]
    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid... parent model and effort inherited</multi_agent_role> [hash=4692806a8a393d2c]
04:message/developer:
    <multi_agent_mode>Proactive-delegation guidance replaced. Agent spawning only on explicit request from t...le AGENTS.md or skill instructions</multi_agent_mode> [hash=2474ee6b5769b670]
05:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><WORKSPACE_ROOT 1></root></workspace_roots><permission_profile type...e="unrestricted" /></permission_profile></filesystem> [hash=0592734c170299c1]
    </environment_context>
06:message/user:
    Check whether the Notes plugin echo tool is available.
-- request 2 (turn) --
07:custom_tool_call/exec:text(ALL_TOOLS.filter(({ name }) => name === "mcp__notes__echo").map(({ name }) => name));
08:custom_tool_call_output:[]
-- request 3 (turn) --
09:message/assistant:
    The Notes tool is not installed yet.
10:message/user:
    I installed Notes. Use $notes:summarize and the Notes tool to check that Mira owns the kickoff.
11:message/user:
    <skill>
    <name>notes:summarize</name>
    <path><PLUGINS_CACHE>/test/notes/local/skills/summarize/SKILL.md</path>
    ---
    name: summarize
    description: Summarize team notes
    ---

    State the owner and date from the notes.

    </skill>
12:message/developer:
    Plugin `notes` capabilities:
    - Skill prefix: `notes:`
    - MCP servers this session: `notes`
-- request 4 (turn) --
13:custom_tool_call/exec:text(ALL_TOOLS.filter(({ name }) => name === "mcp__notes__echo").map(({ name }) => name));
14:custom_tool_call_output:["mcp__notes__echo"]
-- request 5 (turn) --
15:custom_tool_call/exec:const result = await tools.mcp__notes__echo({ message: "Mira owns the kickoff" }); text(result.structuredContent?.echo);
16:custom_tool_call_output:ECHOING: Mira owns the kickoff
-- request 6 (turn) --
17:message/assistant:
    The Notes plugin confirms Mira owns the kickoff.
18:message/user:
    Use the Notes tool again to check that the kickoff is Friday.
-- request 7 (turn) --
19:custom_tool_call/exec:const result = await tools.mcp__notes__echo({ message: "The kickoff is Friday" }); text(result.structuredContent?.echo);
20:custom_tool_call_output:ECHOING: The kickoff is Friday
